--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body::-webkit-scrollbar {
   width: 0px;
   height: 0px;
   display: none !important;
+  color: white;
 }
 svg {
   pointer-events: none;
